[package]
name = "messages_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
itertools = "0.10.3"
lazy_static = "1.4.0"
ordinal = "0.3.2"
phf = { version = "0.10.1", features = ["macros"] }
regex = "1.5.6"
reqwest = "0.11.10"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
thiserror = "1.0.32"
axum = "0.5.15"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
parking_lot = "0.12.1"
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["all", "runtime-tokio-rustls"] }
