[package]
name = "messages_backend"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"  # Optimize for size.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
axum = "0.5.15"
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
# openssl = { version = "0.10", features = ["vendored"] }
